handle Cineplex logo in 404